Possible Build Costs

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -138,7 +138,7 @@ block.prog-mats-storm.description = Zaps numerous random targets in range.
 block.prog-mats-apotheosis-nexus.name = [#9A27C4]Apotheosis Nexus
 block.prog-mats-apotheosis-nexus.description = Fires a devastating laser into the sky that arcs down and decimates an area. Requires extensive cooling to operate.
 block.prog-mats-apotheosis-charger.name = [#9A27C4]Apotheosis Charge Tower
-block.prog-mats-apotheosis-charger.description = Fires a laser at an [#9A27C4]Apotheosis[] to give it a major boost in power.
+block.prog-mats-apotheosis-charger.description = Fires a laser at an [#9A27C4]Apotheosis[] to give it a major boost in power.\nNote: Has diminishing returns.
 
 # Distribution
 
@@ -154,7 +154,7 @@ block.prog-mats-fence.description = Discharges energy between linked nodes, dama
 block.prog-mats-web.name = Web
 block.prog-mats-web.description = Discharges energy between linked nodes, damaging enemy units along the way.\nDoes not transmit power.\nPower both sides to double effects.\n\nHas shorter range and less damage, but more connections.
 block.prog-mats-shield-projector.name = Shield Projector
-block.prog-mats-shield-projector.description = Creates a square force field around itself, protecting buildings and units inside from damage.\nOverheats if too much damage is sustained. Optionally uses coolant to prevent overheating. Phase fabric and fusium used together increase shield size.\nUnlike normal force projectors, this regenerates in bursts.\n\n[orange]Capable of blocking [red]strike missiles[].
+block.prog-mats-shield-projector.description = Creates a square force field around itself, protecting buildings and units inside from damage.\nOverheats if too much damage is sustained. Optionally uses coolant to prevent overheating. Phase fabric and valexitite used together increase shield size.\nUnlike normal force projectors, this regenerates in bursts.\n\n[orange]Capable of blocking [red]strike missiles[].
 block.prog-mats-shield-projector.details = It's a square instead of a hexagon because I'm too lazy to calculate the right radius to make it fit alight perfectly.
 
 # Sandbox
@@ -214,7 +214,7 @@ unit.prog-mats-small-flare.name = Small Signal Flare
 unit.prog-mats-small-flare.description = A small signal flare made of silicon. Fired by allures to attract enemy fire.
 unit.prog-mats-small-flare.details = Unobtainable. Only spawned by allures.
 unit.prog-mats-medium-flare.name = Medium Signal Flare
-unit.prog-mats-medium-flare.description = A medium signal flare made of fusium. Fired by allures to attract enemy fire.
+unit.prog-mats-medium-flare.description = A medium signal flare made of valexitite. Fired by allures to attract enemy fire.
 unit.prog-mats-medium-flare.details = Unobtainable. Only spawned by allures.
 unit.prog-mats-large-flare.name = Large Signal Flare
 unit.prog-mats-large-flare.description = A large signal flare made of surge alloy. Fired by allures to attract enemy fire.
@@ -296,7 +296,8 @@ bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}
 
 pm-missing-research = [red]<Research Missing>
 pm-apotheosis-chargers = Chargers: {0}
-pm-apotheosis-falloff = [stat]{0}%[lightgray] boost falloff (Boost from chargers decreases as more are added)
+pm-apotheosis-falloff = [stat]{0}%[lightgray] boost falloff
+pm-apotheosis-falloff-notice = [lightgray](Power boost per charger decreases as more are added)
 
 ## Settings
 
