Use the lighter purple color for name
Also other little things

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -135,10 +135,10 @@ block.prog-mats-storm.name = [#F3E979]Storm
 block.prog-mats-storm.description = Zaps numerous random targets in range.
 
 ##Apotheosis
-block.prog-mats-apotheosis-nexus.name = [#9A27C4]Apotheosis Nexus
+block.prog-mats-apotheosis-nexus.name = [#CE5EE5]Apotheosis Nexus
 block.prog-mats-apotheosis-nexus.description = Fires a devastating laser into the sky that arcs down and decimates an area. Requires extensive cooling to operate.
-block.prog-mats-apotheosis-charger.name = [#9A27C4]Apotheosis Charge Tower
-block.prog-mats-apotheosis-charger.description = Fires a laser at an [#9A27C4]Apotheosis[] to give it a major boost in power.\nNote: Has diminishing returns.
+block.prog-mats-apotheosis-charger.name = [#CE5EE5]Apotheosis Charge Tower
+block.prog-mats-apotheosis-charger.description = Fires a laser at an [#CE5EE5]Apotheosis[] to give it a major boost in power.\nNote: Has diminishing returns.
 
 # Distribution
 
@@ -180,9 +180,9 @@ block.prog-mats-rainbow-power-boost.description = Like the rainbow power source,
 block.prog-mats-rainbow-power-boost.details = AMPLIFY WITH THE GAY POWER!
 
 block.prog-mats-sandbox-wall.name = Sandbox Wall
-block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nSandbox only.\n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
+block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.\n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
 block.prog-mats-sandbox-wall-large.name = Large Sandbox Wall
-block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled. \nSandbox only. \n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
+block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.\n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
 pm-infinity = Infinity
 
 block.prog-mats-god-factory.name = Death Factory
@@ -297,7 +297,7 @@ bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}
 pm-missing-research = [red]<Research Missing>
 pm-apotheosis-chargers = Chargers: {0}
 pm-apotheosis-falloff = [stat]{0}%[lightgray] boost falloff
-pm-apotheosis-falloff-notice = [lightgray](Power boost per charger decreases as more are added)
+pm-apotheosis-falloff-notice = [lightgray](Each charger connected boosts less)
 
 ## Settings
 
