--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -165,6 +165,8 @@ block.prog-mats-harbinger.details = Go to r/Mindustry and search for "The true p
 block.prog-mats-everything-gun.name = Chaos
 block.prog-mats-everything-gun.description = Fires [red]ALL[] bullets in the game (vanilla or modded) at random - fires more powerful bullets over time.\nSandbox only.\n[darkgray]Hippity hoppity your ears are my property.\n(May or may not get quite laggy from all the chaos.)
 block.prog-mats-everything-gun.details = Ilya helped me with the increase damage over time code.\n[red]May or may not crash the game because scriped bullets in other mods can have incompatible custom stuff.
+block.prog-mats-omega-charger.name = [#CE5EE5]Apotheosis Omega Charger
+block.prog-mats-omega-charger.description = Fires a laser at an [#CE5EE5]Apotheosis[] to give it an [lime]OMEGA[] boost in power.\nNote: Has diminishing returns.\nSandbox only.
 
 block.prog-mats-sand-driver.name = Sand Driver
 block.prog-mats-sand-driver.description = Long-range item generation structure. Fires massive long bursts of items to other burst drivers.\nMagically creates and fires random items.\nSandbox only.
@@ -296,6 +298,7 @@ bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}
 
 pm-missing-research = [red]<Research Missing>
 pm-apotheosis-chargers = Chargers: {0}
+pm-apotheosis-none = No chargers connected
 pm-apotheosis-falloff = [stat]{0}%[lightgray] boost falloff
 pm-apotheosis-falloff-notice = [lightgray](Each charger connected boosts less)
 
