Base Code + Config Code
I think I'm getting better at doing config stuff, thanks to working on Eso ~~and copying Goob~~.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -296,11 +296,21 @@ bullet.pm-splits = [stat]{0}[lightgray]x split bullets:
 
 bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}[lightgray] tiles
 
+##Block-specific Info
+
 pm-missing-research = [red]<Research Missing>
+
 pm-apotheosis-chargers = Chargers: {0}
 pm-apotheosis-none = No chargers connected
 pm-apotheosis-falloff = [stat]{0}%[lightgray] boost falloff
 pm-apotheosis-falloff-notice = [lightgray](Each charger connected boosts less)
+
+pm-drone-editname = Edit Station Name
+pm-drone-route = Route {0}:
+pm-drone-station = (Current Station: {0})
+pm-drone-select-origin = Change Origin{0}
+pm-drone-select-destination = Change Destination{0}
+pm-drone-clear-route = Clear Route
 
 ## Settings
 
