--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -311,6 +311,8 @@ pm-drone-station = (Current Station: {0})
 pm-drone-select-origin = Change Origin{0}
 pm-drone-select-destination = Change Destination{0}
 pm-drone-clear-route = Clear Route
+pm-drone-pad-charge = Drone Charge
+pm-drone-charge = Charge
 
 ## Settings
 
