Dumping for everything else

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -306,7 +306,7 @@ pm-apotheosis-falloff = [stat]{0}%[lightgray] boost falloff
 pm-apotheosis-falloff-notice = [lightgray](Each charger connected boosts less)
 
 pm-drone-editname = Edit Station Name
-pm-drone-dump-liquid = Dump Liquids
+pm-drone-dump = Dump Cargo
 pm-drone-route = Route {0}:
 pm-drone-station = (Current Station: {0})
 pm-drone-select-origin = Change Origin{0}
