--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -185,7 +185,6 @@ block.prog-mats-sandbox-wall.name = Sandbox Wall
 block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.\n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
 block.prog-mats-sandbox-wall-large.name = Large Sandbox Wall
 block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.\n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
-pm-infinity = Infinity
 
 block.prog-mats-god-factory.name = Death Factory
 block.prog-mats-god-factory.description = Produces Death.\nSandbox only.
@@ -299,6 +298,7 @@ bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}
 ##Block-specific Info
 
 pm-missing-research = [red]<Research Missing>
+pm-infinity = Infinity
 
 pm-apotheosis-chargers = Chargers: {0}
 pm-apotheosis-none = No chargers connected
@@ -315,6 +315,8 @@ pm-drone-station-toofar = [#{0}]Stations too far apart! [red](Drone battery won'
 pm-drone-clear-route = Clear Route
 pm-drone-pad-charge = Drone Charge
 pm-drone-charge = Charge
+pm-drone-use-construct = [lightgray]Drone Construction:
+pm-drone-use-recharge = [lightgray]Drone Recharge:
 
 ## Settings
 
