--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -106,8 +106,6 @@ block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty missile shell.
 block.prog-mats-basic-missile.name = Basic Missile
 block.prog-mats-basic-missile.description = Explodes on landing, dealing a lot of damage.\nUsed by [red]Strikedowns[] as ammo.
-block.prog-mats-emp-missile.name = EMP Missile
-block.prog-mats-emp-missile.description = Explodes on landing, dealing some damage and stunning units in the area.\nUsed by [red]Strikedowns[] as ammo.
 block.prog-mats-recursive-missile.name = Recursive Missile
 block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage. Releases weaker versions of itself before landing. Can do this up to 2 times.\nUsed by [red]Strikedowns[] as ammo.
 block.prog-mats-empty-nuke.name = Nuclear Missile Shell
@@ -146,6 +144,19 @@ block.prog-mats-floating-conveyor.name = Hydroconveyor
 block.prog-mats-floating-conveyor.description = Transports items forward. Faster than standard conveyors, but slower than titanium conveyors. Can be placed in deep liquids.
 block.prog-mats-burst-driver.name = Burst Driver
 block.prog-mats-burst-driver.description = Long-range item transport structure. Fires massive long bursts of items to other burst drivers.\nSingular items are lighter than a large amount bunched together, so it's range and speed are faster than mass drivers.
+
+# Drones
+block.prog-mats-drone-pad.name = Drone Pad
+block.prog-mats-drone-pad.description = Constructs a drone that will carry items between set pairs of stations. It will also return to the pad to recharge. Incase of destruction, a new drone will be built.
+block.prog-mats-drone-station-items.name = Item Drone Station
+block.prog-mats-drone-station-items.description = A station that a transport drone can pick up or drop off items.
+block.prog-mats-drone-station-liquids.name = Liquid Drone Station
+block.prog-mats-drone-station-liquids.description = A station that a transport drone can pick up or drop off liquids.
+block.prog-mats-drone-station-payloads.name = Payload Drone Station
+block.prog-mats-drone-station-payloads.description = A station that a transport drone can pick up or drop off payloads.
+unit.prog-mats-drone.name = Taurus
+unit.prog-mats-drone.description = Consumes power to transport materials between stations configured in its drone pad. Returns to recharge automatically.\n[red]Dies if it runs out of power.[]
+unit.prog-mats-drone.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 
 # Effect
 
@@ -232,14 +243,11 @@ weather.prog-mats-overdrive.name = Overdrive Storm
 
 ## Status Effects
 
-status.prog-mats-emp.name = EMP
 status.prog-mats-frenzy.name = Frenzy
 status.prog-mats-disassembly.name = Disassembly
 status.prog-mats-weaken.name = Weakened
 status.prog-mats-corvus-19.name = Corvus-19
 status.prog-mats-corvus-19.details = lmao
-# status.prog-mats-strikedown-quantum.name = Quantum Missile Teleportation
-# status.prog-mats-arbiter-emp.name = EMP Nuke Paralysis
 
 ## Stats and stuff
 
