Fixes here and there
Drone Pad details lmao

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -148,7 +148,7 @@ block.prog-mats-burst-driver.description = Long-range item transport structure. 
 # Drones
 block.prog-mats-drone-pad.name = Drone Pad
 block.prog-mats-drone-pad.description = Constructs a drone that will carry items between set pairs of stations. It will also return to the pad to recharge. Incase of destruction, a new drone will be built.
-block.prog-mats-drone-pad.details = Creating slaves without logic since, uh, when I created this.
+block.prog-mats-drone-pad.details = "Enslaving units without logic since, uh, when I created this."\n        -Me ([#FCC21B]MEEP of Faith[])
 block.prog-mats-drone-station-items.name = Item Drone Station
 block.prog-mats-drone-station-items.description = A station that a transport drone can pick up or drop off items.
 block.prog-mats-drone-station-liquids.name = Liquid Drone Station
