b132 brings bug fixes

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -194,9 +194,9 @@ block.prog-mats-rainbow-power-boost.description = Like the rainbow power source,
 block.prog-mats-rainbow-power-boost.details = AMPLIFY WITH THE GAY POWER!
 
 block.prog-mats-sandbox-wall.name = Sandbox Wall
-block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.\n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
+block.prog-mats-sandbox-wall.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.
 block.prog-mats-sandbox-wall-large.name = Large Sandbox Wall
-block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.\n[gray]Note: Plastanium wall toggle does not work, it's not possible with current game code.
+block.prog-mats-sandbox-wall-large.description = Protects structures from enemy projectiles. Functionalities of Surge, Phase, and Plastanium walls can be toggled.\nAlso has DPS testing.\nSandbox only.
 
 block.prog-mats-god-factory.name = Death Factory
 block.prog-mats-god-factory.description = Produces Death.\nSandbox only.
