Credit and engine adjustments

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -112,6 +112,7 @@ block.prog-mats-empty-nuke.name = Nuclear Missile Shell
 block.prog-mats-empty-nuke.description = An empty nuclear missile shell.
 block.prog-mats-basic-nuke.name = Basic Nuke
 block.prog-mats-basic-nuke.description = Explodes on landing, dealing a ton of damage.\nUsed by [red]Trinitys[] as ammo.
+block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 block.prog-mats-cluster-nuke.name = Cluster Nuke
 block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by [red]Trinitys[] as ammo.
 
@@ -157,7 +158,7 @@ block.prog-mats-drone-station-payloads.name = Payload Drone Station
 block.prog-mats-drone-station-payloads.description = A station that a transport drone can pick up or drop off payloads.
 unit.prog-mats-drone.name = Taurus
 unit.prog-mats-drone.description = Consumes power to transport materials between stations configured in its drone pad. Returns to recharge automatically.\n[red]Dies if it runs out of power.[]
-unit.prog-mats-drone.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
+unit.prog-mats-drone.details = Sprite by Flin.
 
 # Effect
 
@@ -339,5 +340,5 @@ setting.pm-farting.description = Restart required to apply changes.
 
 ## Mod
 
-mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]\n\n[#FCC21B]Contributors:[]\n        [#FCC21B]ThirstyBoi[] (Eruptor sprite)\n        [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)\n        [#FCC21B]VozDuh[] (Missile turret sprites, new icon)\n        [#FCC21B]Ilya246[] (Luminocity damage ramping)\n        [#FCC21B]Kapzduke[] (Tinker sprites)\n        [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)\n        [#FCC21B]GlennFolker[] (Alphableeder)\n        [#FCC21B]lordReddx[] (RU Translation)\n        Some sounds from Freesound.\n        Anyone I stole code from.
+mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]\n\n[#FCC21B]Contributors:[]\n        [#FCC21B]ThirstyBoi[] (Eruptor sprite)\n        [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)\n        [#FCC21B]VozDuh[] (Missile turret sprites, new icon)\n        [#FCC21B]Ilya246[] (Luminocity damage ramping)\n        [#FCC21B]Kapzduke[] (Tinker sprites)\n        [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)\n        [#FCC21B]Flin[] (Drone resprite)\n        [#FCC21B]GlennFolker[] (Alphableeder)\n        [#FCC21B]lordReddx[] (RU Translation)\n        Some sounds from Freesound.\n        Anyone I stole code from.
 mod.prog-mats.description = Progressed Materials, but in Java. My main mod, which mostly just adds turrets. I'm just experimenting to see what I can do with the power I hold.\n\nThe name definitely isn't made of the synonyms of "Advance" and "Content".
