--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -62,7 +62,7 @@ block.prog-mats-tinker.details = Original sprite by Kapzduke. Slighly edited by 
 ### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
 block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [orange]Tinkers[] as ammo.
-block.prog-mats-strike-sentry.name = Strike Sentry
+block.prog-mats-strike-sentry.name = Missile Sentry
 block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [orange]Tinkers[] as ammo.
 block.prog-mats-dash-sentry.name = Dash Sentry
 block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [orange]Tinkers[] as ammo.
@@ -219,7 +219,7 @@ block.prog-mats-multi-source-void.details = U N L I M I T E D   P O W E R
 unit.prog-mats-barrage.name = Barrage
 unit.prog-mats-barrage.description = Barrages enemies with homing shots. Does not move. Expires after a short lifetime.
 unit.prog-mats-downpour.name = Downpour
-unit.prog-mats-downpour.description = Launches small missiles into the sky that land and explode on targets. Does not move. Expires after a short lifetime.
+unit.prog-mats-downpour.description = Fire smalls missiles at enemies. Does not move. Expires after a short lifetime.
 unit.prog-mats-rapier.name = Rapier
 unit.prog-mats-rapier.description = Dashes at enemies with a piercing laser. Technically does not move. Expires after a short lifetime.
 unit.prog-mats-rapier.details = Featuring the very original idea of negative recoil.
