Apparently PayloadTurret was missing saving code for its variables

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -56,16 +56,16 @@ block.prog-mats-excalibur.description = The Holy [darkgray]Sword[] Laser [yellow
 block.prog-mats-excalibur.details = Sprite by Goober.\nAnimations by me.
 
 ## bUiLdIn A sEnTrY
-block.prog-mats-tinker.name = [gold]Tinker
+block.prog-mats-tinker.name = [gold]Sergeant
 block.prog-mats-tinker.description = Launches strong sentry units that expire after a duration.
 block.prog-mats-tinker.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
 ### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
-block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [orange]Tinkers[] as ammo.
+block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [gold]Sergeant[] as ammo.
 block.prog-mats-strike-sentry.name = Missile Sentry
-block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [orange]Tinkers[] as ammo.
+block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [gold]Sergeant[] as ammo.
 block.prog-mats-dash-sentry.name = Dash Sentry
-block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [orange]Tinkers[] as ammo.
+block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [gold]Sergeant[] as ammo.
 
 ## Vaccinator
 block.prog-mats-vaccinator.name = [red]Vaccinator
