--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -219,7 +219,7 @@ block.prog-mats-multi-source-void.details = U N L I M I T E D   P O W E R
 unit.prog-mats-barrage.name = Barrage
 unit.prog-mats-barrage.description = Barrages enemies with homing shots. Does not move. Expires after a short lifetime.
 unit.prog-mats-downpour.name = Downpour
-unit.prog-mats-downpour.description = Fire smalls missiles at enemies. Does not move. Expires after a short lifetime.
+unit.prog-mats-downpour.description = Fire smalls homing missiles at enemies. Does not move. Expires after a short lifetime.
 unit.prog-mats-rapier.name = Rapier
 unit.prog-mats-rapier.description = Dashes at enemies with a piercing laser. Technically does not move. Expires after a short lifetime.
 unit.prog-mats-rapier.details = Featuring the very original idea of negative recoil.
