--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -86,10 +86,12 @@ block.prog-mats-sentinel.description = Fires powerful energy blasts with a massi
 block.prog-mats-sentinel.details = Anxiety piano not included.
 
 ## Sword
-block.prog-mats-masquerade.name = [violet]Masquerade
-block.prog-mats-masquerade.description = Controls a ring of flying swords to stab enemies.\n\n[green]Sword opacity setting can be found at the bottom of the graphics settings.
-block.prog-mats-violet.name = [violet]Violet
-block.prog-mats-violet.description = Controls a ring of giant flying swords to stab enemies.\n\n[green]Sword opacity setting can be found at the bottom of the graphics settings.
+block.prog-mats-masquerade.name = [violet]Ball
+block.prog-mats-masquerade.description = Controls a ring of flying swords to stab enemies.
+block.prog-mats-masquerade.details = Sword opacity setting can be found at the bottom of the graphics settings.
+block.prog-mats-violet.name = [violet]Masquerade
+block.prog-mats-violet.description = Controls a ring of giant flying swords to stab enemies.
+block.prog-mats-violet.details = Sword opacity setting can be found at the bottom of the graphics settings.
 
 ## Missile
 block.prog-mats-firestorm.name = [red]Firestorm
