--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -96,13 +96,13 @@ block.prog-mats-violet.details = Sword opacity setting can be found at the botto
 ## Missile
 block.prog-mats-firestorm.name = [red]Firestorm
 block.prog-mats-firestorm.description = Fires barrages of small [red]strike missiles[] into the sky that land and explode on targets.
-block.prog-mats-firestorm.details = Sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
+block.prog-mats-firestorm.details = Sprite by VozDuh.
 block.prog-mats-strikedown.name = [red]Strikedown
 block.prog-mats-strikedown.description = Fires [red]strike missiles[] into the sky that land and explode on targets. Once at high enough altitude, thie missile can drop down early to strike targets.
-block.prog-mats-strikedown.details = Sprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
+block.prog-mats-strikedown.details = Sprite by VozDuh.
 block.prog-mats-arbiter.name = [red]Trinity
 block.prog-mats-arbiter.description = Fires nuclear [red]strike missiles[] into the sky that land and explode on targets. Once at high enough altitude, thie missile can drop down early to strike targets.
-block.prog-mats-arbiter.details = On July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."\n\nSprite by VozDuh.\n\nAnyone else remember my Ohno Missiles mod from v5?
+block.prog-mats-arbiter.details = On July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."\n\nSprite by VozDuh.
 ### Missiles
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty missile shell.
@@ -117,6 +117,10 @@ block.prog-mats-basic-nuke.description = Explodes on landing, dealing a ton of d
 block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 block.prog-mats-cluster-nuke.name = Cluster Nuke
 block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by [red]Trinitys[] as ammo.
+
+## Rocket
+block.prog-mats-hydra.name = Hydra
+block.prog-mats-hydra.details = Anyone else remember my Ohno Missiles mod from v5?
 
 ## Pixel
 block.prog-mats-bit.name = [pink]Pixel
