--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,4 +1,4 @@
-# suppress inspection "UnusedProperty" for whole fil
+# suppress inspection "UnusedProperty" for whole file
 
 # Item
 
@@ -346,5 +346,16 @@ setting.pm-farting.description = Restart required to apply changes.
 
 ## Mod
 
-mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]\n\n[#FCC21B]Contributors:[]\n        [#FCC21B]ThirstyBoi[] (Eruptor sprite)\n        [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)\n        [#FCC21B]VozDuh[] (Missile turret sprites, new icon)\n        [#FCC21B]Ilya246[] (Luminocity damage ramping)\n        [#FCC21B]Kapzduke[] (Tinker sprites)\n        [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)\n        [#FCC21B]Flin[] (Drone resprite)\n        [#FCC21B]GlennFolker[] (Alphableeder)\n        [#FCC21B]lordReddx[] (RU Translation)\n        Some sounds from Freesound.\n        Anyone I stole code from.
+mod.prog-mats.author = [#FCC21B]Creator:\n        MEEP of Faith[]
+mod.prog-mats-contributor.0 = [#FCC21B]ThirstyBoi[] (Eruptor sprite)
+mod.prog-mats-contributor.1 = [#FCC21B]Goober[] (Kugelblitz and Popeshadow sprites)
+mod.prog-mats-contributor.2 = [#FCC21B]VozDuh[] (Missile turret sprites, new icon)
+mod.prog-mats-contributor.3 = [#FCC21B]Ilya246[] (Luminocity damage ramping)
+mod.prog-mats-contributor.4 = [#FCC21B]Kapzduke[] (Tinker sprites)
+mod.prog-mats-contributor.5 = [#FCC21B]TheMalaysianDude[] (Missile assembler resprite)
+mod.prog-mats-contributor.6 = [#FCC21B]Flin[] (Drone resprite)
+mod.prog-mats-contributor.7 = [#FCC21B]GlennFolker[] (Alphableeder)
+mod.prog-mats-contributor.8 = [#FCC21B]lordReddx[] (RU Translation)
+mod.prog-mats-contributor.9 = Some sounds from [#FCC21B]Freesound[].
+mod.prog-mats-contributor.10 = Anyone I stole code from.
 mod.prog-mats.description = Progressed Materials, but in Java. My main mod, which mostly just adds turrets. I'm just experimenting to see what I can do with the power I hold.\n\nThe name definitely isn't made of the synonyms of "Advance" and "Content".
