--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -356,6 +356,7 @@ mod.prog-mats-contributor.5 = [#FCC21B]TheMalaysianDude[] (Missile assembler res
 mod.prog-mats-contributor.6 = [#FCC21B]Flin[] (Drone resprite)
 mod.prog-mats-contributor.7 = [#FCC21B]GlennFolker[] (Alphableeder)
 mod.prog-mats-contributor.8 = [#FCC21B]lordReddx[] (RU Translation)
-mod.prog-mats-contributor.9 = Some sounds from [#FCC21B]Freesound[].
-mod.prog-mats-contributor.10 = Anyone I stole code from.
+mod.prog-mats-contributor.9 = [#FCC21B]Jwiggs[] (Rocket sound from IIslands of War)
+mod.prog-mats-contributor.10 = Some sounds from [#FCC21B]Freesound[].
+mod.prog-mats-contributor.11 = Anyone I stole code from.
 mod.prog-mats.description = Progressed Materials, but in Java. My main mod, which mostly just adds turrets. I'm just experimenting to see what I can do with the power I hold.\n\nThe name definitely isn't made of the synonyms of "Advance" and "Content".
