--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -119,8 +119,8 @@ block.prog-mats-cluster-nuke.name = Cluster Nuke
 block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by [red]Trinitys[] as ammo.
 
 ## Rocket
-block.prog-mats-hydra.name = Hydra
-block.prog-mats-hydra.details = Anyone else remember my Ohno Missiles mod from v5?
+block.prog-mats-arbalest.name = Arbalest
+block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod from v5?
 
 ## Pixel
 block.prog-mats-bit.name = [pink]Pixel
