Through the Fire and Flames

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -251,6 +251,7 @@ weather.prog-mats-overdrive.name = Overdrive Storm
 
 ## Status Effects
 
+status.prog-mats-incend-burn.name = Incendiary Burn
 status.prog-mats-frenzy.name = Frenzy
 status.prog-mats-disassembly.name = Disassembly
 status.prog-mats-weaken.name = Weakened
