--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -341,7 +341,7 @@ setting.pm-title = Progressed Materials
 setting.pm-swordopacity.name = Sword Opacity
 setting.pm-strobespeed.name = Sandbox Block Strobe Speed
 setting.pm-tesla-range.name = Display Tesla Range When Attacking
-setting.pm-farting.name = Everything Farts on Destruction
+setting.pm-farting.name = Replace many sounds with wind3.ogg
 setting.pm-farting.description = Restart required to apply changes.
 
 
