--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -312,6 +312,8 @@ bullet.pm-splits = [stat]{0}[lightgray]x split bullets:
 
 bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}[lightgray] tiles
 
+bullet.pm-bombs = [stat]{0}[lightgray] bomb bullets/block:
+
 ##Block-specific Info
 
 pm-missing-research = [red]<Research Missing>
