--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -55,18 +55,6 @@ block.prog-mats-excalibur.name = [yellow]Excalibur
 block.prog-mats-excalibur.description = The Holy [darkgray]Sword[] Laser [yellow]Excalibur[] fires cross-shaped lasers.\nThis is also known as [yellow]Popeshadow[].
 block.prog-mats-excalibur.details = Sprite by Goober.\nAnimations by me.
 
-## bUiLdIn A sEnTrY
-block.prog-mats-tinker.name = [gold]Sergeant
-block.prog-mats-tinker.description = Launches strong sentry units that expire after a duration.
-block.prog-mats-tinker.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
-### Ammo payloads
-block.prog-mats-basic-sentry.name = Basic Sentry
-block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [gold]Sergeant[] as ammo.
-block.prog-mats-strike-sentry.name = Missile Sentry
-block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [gold]Sergeant[] as ammo.
-block.prog-mats-dash-sentry.name = Dash Sentry
-block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [gold]Sergeant[] as ammo.
-
 ## Vaccinator
 block.prog-mats-vaccinator.name = [red]Vaccinator
 block.prog-mats-vaccinator.description = Fires syringes that are definitely filled with vaccines and totally not nanomachines.
@@ -93,6 +81,23 @@ block.prog-mats-violet.name = [violet]Masquerade
 block.prog-mats-violet.description = Controls a ring of giant flying swords to stab enemies.
 block.prog-mats-violet.details = Sword opacity setting can be found at the bottom of the graphics settings.
 
+## bUiLdIn A sEnTrY
+block.prog-mats-tinker.name = [gold]Sergeant
+block.prog-mats-tinker.description = Launches strong sentry units that expire after a duration.
+block.prog-mats-tinker.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
+### Ammo payloads
+block.prog-mats-basic-sentry.name = Basic Sentry
+block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [gold]Sergeant[] as ammo.
+block.prog-mats-strike-sentry.name = Missile Sentry
+block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [gold]Sergeant[] as ammo.
+block.prog-mats-dash-sentry.name = Dash Sentry
+block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [gold]Sergeant[] as ammo.
+
+## Rocket
+block.prog-mats-arbalest.name = Arbalest
+block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod from v5?
+### Rockets
+
 ## Missile
 block.prog-mats-firestorm.name = [red]Firestorm
 block.prog-mats-firestorm.description = Fires barrages of small [red]strike missiles[] into the sky that land and explode on targets.
@@ -117,10 +122,6 @@ block.prog-mats-basic-nuke.description = Explodes on landing, dealing a ton of d
 block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 block.prog-mats-cluster-nuke.name = Cluster Nuke
 block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by [red]Trinitys[] as ammo.
-
-## Rocket
-block.prog-mats-arbalest.name = Arbalest
-block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod from v5?
 
 ## Pixel
 block.prog-mats-bit.name = [pink]Pixel
@@ -312,6 +313,7 @@ bullet.pm-splits = [stat]{0}[lightgray]x split bullets:
 
 bullet.pm-continuoussplashdamage = [stat]{0}[lightgray] area dmg/sec ~ [stat]{1}[lightgray] tiles
 
+bullet.pm-bombs-single = [stat]1[lightgray] bomb bullet/block:
 bullet.pm-bombs = [stat]{0}[lightgray] bomb bullets/block:
 
 ##Block-specific Info
