--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -52,7 +52,7 @@ block.prog-mats-blackhole.details = Sprite based off of a sprite provided by Goo
 
 ## Popeshadow
 block.prog-mats-excalibur.name = [yellow]Excalibur
-block.prog-mats-excalibur.description = The Holy [darkgray]Sword[] Laser [yellow]Excalibur[] fires cross-shaped lasers.\nThis is also known as [yellow]Popeshadow[].
+block.prog-mats-excalibur.description = The Holy [darkgray]Sword[] Laser [yellow]Excalibur[] fires cross-shaped lasers.\n\nAlso known as [yellow]Popeshadow[].
 block.prog-mats-excalibur.details = Sprite by Goober.\nAnimations by me.
 
 ## Vaccinator
@@ -87,26 +87,35 @@ block.prog-mats-tinker.description = Launches strong sentry units that expire af
 block.prog-mats-tinker.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
 ### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
-block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [gold]Sergeant[] as ammo.
+block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [gold]Sergeants[] as ammo.
 block.prog-mats-strike-sentry.name = Missile Sentry
-block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [gold]Sergeant[] as ammo.
+block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [gold]Sergeants[] as ammo.
 block.prog-mats-dash-sentry.name = Dash Sentry
-block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [gold]Sergeant[] as ammo.
+block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [gold]Sergeants[] as ammo.
 
 ## Rocket
-block.prog-mats-arbalest.name = Arbalest
+block.prog-mats-arbalest.name = [gold]Arbalest
+block.prog-mats-arbalest.description = Fires extremely fast rockets at enemies.
 block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod from v5?
 ### Rockets
+block.prog-mats-empty-rocket.name = Rocket Shell
+block.prog-mats-empty-rocket.description = An empty rocket shell.
+block.prog-mats-basic-rocket.name = Basic Rocket
+block.prog-mats-basic-rocket.description = Fast moving, explodes on hit, dealing a lot of damage.\nUsed by [gold]Arbalests[] as ammo.
+block.prog-mats-incendiary-rocket.name = Incendiary Rocket
+block.prog-mats-incendiary-rocket.description = Fast moving, explodes on hit, dealing a lot of damage and causing fire.\nUsed by [gold]Arbalests[] as ammo.
+block.prog-mats-bomber-rocket.name = Bomber Rocket
+block.prog-mats-bomber-rocket.description = Fast moving, drops bombs behind it that deal damage.\nUsed by [gold]Arbalests[] as ammo.
 
 ## Missile
 block.prog-mats-firestorm.name = [red]Firestorm
-block.prog-mats-firestorm.description = Fires barrages of small [red]strike missiles[] into the sky that land and explode on targets.
+block.prog-mats-firestorm.description = Fires barrages of small [red]arc missiles[] into the sky that land and explode on enemies.
 block.prog-mats-firestorm.details = Sprite by VozDuh.
 block.prog-mats-strikedown.name = [red]Strikedown
-block.prog-mats-strikedown.description = Fires [red]strike missiles[] into the sky that land and explode on targets. Once at high enough altitude, thie missile can drop down early to strike targets.
+block.prog-mats-strikedown.description = Fires [red]arc missiles[] into the sky that land and explode on targets. The missiles can fall back down early to strike enemies.
 block.prog-mats-strikedown.details = Sprite by VozDuh.
 block.prog-mats-arbiter.name = [red]Trinity
-block.prog-mats-arbiter.description = Fires nuclear [red]strike missiles[] into the sky that land and explode on targets. Once at high enough altitude, thie missile can drop down early to strike targets.
+block.prog-mats-arbiter.description = Fires nuclear [red]arc missiles[] into the sky that land and explode on targets. The missiles can fall back down early to strike enemies.
 block.prog-mats-arbiter.details = On July 16, 1945, the first ever nuclear bomb was detonated in a test conducted by the US Military. The test was called "Codename [red]Trinity[]."\n\nSprite by VozDuh.
 ### Missiles
 block.prog-mats-empty-missile.name = Missile Shell
@@ -174,7 +183,7 @@ block.prog-mats-fence.description = Discharges energy between linked nodes, dama
 block.prog-mats-web.name = Web
 block.prog-mats-web.description = Discharges energy between linked nodes, damaging enemy units along the way.\nDoes not transmit power.\nPower both sides to double effects.\n\nHas shorter range and less damage, but more connections.
 block.prog-mats-shield-projector.name = Shield Projector
-block.prog-mats-shield-projector.description = Creates a square force field around itself, protecting buildings and units inside from damage.\nOverheats if too much damage is sustained. Optionally uses coolant to prevent overheating. Phase fabric and valexitite used together increase shield size.\nUnlike normal force projectors, this regenerates in bursts.\n\n[orange]Capable of blocking [red]strike missiles[].
+block.prog-mats-shield-projector.description = Creates a square force field around itself, protecting buildings and units inside from damage.\nOverheats if too much damage is sustained. Optionally uses coolant to prevent overheating. Phase fabric and valexitite used together increase shield size.\nUnlike normal force projectors, this regenerates in bursts.\n\n[orange]Capable of blocking [red]arc missiles[].
 block.prog-mats-shield-projector.details = It's a square instead of a hexagon because I'm too lazy to calculate the right radius to make it fit alight perfectly.
 
 # Sandbox
