--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -2,7 +2,7 @@
 
 # Item
 
-item.prog-mats-techtanite.name = Valexitite
+item.prog-mats-techtanite.name = Tenelium
 item.prog-mats-techtanite.description = A sythetic element fused from titanium and thorium. Used in advanced electronics.
 item.prog-mats-techtanite.details = Based on the real life element Technetium.
 
@@ -183,7 +183,7 @@ block.prog-mats-fence.description = Discharges energy between linked nodes, dama
 block.prog-mats-web.name = Web
 block.prog-mats-web.description = Discharges energy between linked nodes, damaging enemy units along the way.\nDoes not transmit power.\nPower both sides to double effects.\n\nHas shorter range and less damage, but more connections.
 block.prog-mats-shield-projector.name = Shield Projector
-block.prog-mats-shield-projector.description = Creates a square force field around itself, protecting buildings and units inside from damage.\nOverheats if too much damage is sustained. Optionally uses coolant to prevent overheating. Phase fabric and valexitite used together increase shield size.\nUnlike normal force projectors, this regenerates in bursts.\n\n[orange]Capable of blocking [red]arc missiles[].
+block.prog-mats-shield-projector.description = Creates a square force field around itself, protecting buildings and units inside from damage.\nOverheats if too much damage is sustained. Optionally uses coolant to prevent overheating. Phase fabric and tenelium used together increase shield size.\nUnlike normal force projectors, this regenerates in bursts.\n\n[orange]Capable of blocking [red]arc missiles[].
 block.prog-mats-shield-projector.details = It's a square instead of a hexagon because I'm too lazy to calculate the right radius to make it fit alight perfectly.
 
 # Sandbox
@@ -244,7 +244,7 @@ unit.prog-mats-small-flare.name = Small Signal Flare
 unit.prog-mats-small-flare.description = A small signal flare made of silicon. Fired by allures to attract enemy fire.
 unit.prog-mats-small-flare.details = Unobtainable. Only spawned by allures.
 unit.prog-mats-medium-flare.name = Medium Signal Flare
-unit.prog-mats-medium-flare.description = A medium signal flare made of valexitite. Fired by allures to attract enemy fire.
+unit.prog-mats-medium-flare.description = A medium signal flare made of tenelium. Fired by allures to attract enemy fire.
 unit.prog-mats-medium-flare.details = Unobtainable. Only spawned by allures.
 unit.prog-mats-large-flare.name = Large Signal Flare
 unit.prog-mats-large-flare.description = A large signal flare made of surge alloy. Fired by allures to attract enemy fire.
