--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -45,6 +45,12 @@ block.prog-mats-mivnigun.name = M-IV-nigun
 block.prog-mats-mivnigun.description = "Too much" simply doesn't exist in my dictionary.\n\n[orange]Overdrive, reload multiplier, and coolant affect how fast it spins up. Reload multiplier affects max firing speed.
 block.prog-mats-mivnigun.details = Dom't ask me to make a "M-VIII-nigun."
 
+## Geomancy
+block.prog-mats-concretion.name = Concretion
+block.prog-mats-concretion.description = Causes pillars of explosive rock to form under ground enemies.
+block.prog-mats-igneous-pillar.name = Igneous Pillar
+block.prog-mats-igneous-pillar.description = Explodes after a short delay. Spawned by concretion turrets.\nOnly placeable in sandbox.
+
 ## Blackhole
 block.prog-mats-blackhole.name = [purple]Kugelblitz
 block.prog-mats-blackhole.description = Fires small black holes that sucks in units and bullets.\n[red]WARNING: Black holes coming in contact of those of another team will cause a massive destructive cataclysm.
@@ -87,11 +93,11 @@ block.prog-mats-tinker.description = Launches strong sentry units that expire af
 block.prog-mats-tinker.details = Original sprite by Kapzduke. Slighly edited by me in the Payload Update.
 ### Ammo payloads
 block.prog-mats-basic-sentry.name = Basic Sentry
-block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [gold]Sergeants[] as ammo.
+block.prog-mats-basic-sentry.description = See Barrage unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.\nOnly placeable in sandbox.
 block.prog-mats-strike-sentry.name = Missile Sentry
-block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [gold]Sergeants[] as ammo.
+block.prog-mats-strike-sentry.description = See Downpour unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.\nOnly placeable in sandbox.
 block.prog-mats-dash-sentry.name = Dash Sentry
-block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [gold]Sergeants[] as ammo.
+block.prog-mats-dash-sentry.description = See Rapier unit for more info.\nUsed by [gold]sergeant[] turrets as ammo.\nOnly placeable in sandbox.
 
 ## Rocket
 block.prog-mats-arbalest.name = [gold]Arbalest
@@ -101,11 +107,11 @@ block.prog-mats-arbalest.details = Anyone else remember my Ohno Missiles mod fro
 block.prog-mats-empty-rocket.name = Rocket Shell
 block.prog-mats-empty-rocket.description = An empty rocket shell.
 block.prog-mats-basic-rocket.name = Basic Rocket
-block.prog-mats-basic-rocket.description = Fast moving, explodes on hit, dealing a lot of damage.\nUsed by [gold]Arbalests[] as ammo.
+block.prog-mats-basic-rocket.description = Fast moving, explodes on hit, dealing a lot of damage.\nUsed by [gold]arbalest[] turrets as ammo.
 block.prog-mats-incendiary-rocket.name = Incendiary Rocket
-block.prog-mats-incendiary-rocket.description = Fast moving, explodes on hit, dealing a lot of damage and causing fire.\nUsed by [gold]Arbalests[] as ammo.
+block.prog-mats-incendiary-rocket.description = Fast moving, explodes on hit, dealing a lot of damage and causing fire.\nUsed by [gold]arbalest[] turrets as ammo.
 block.prog-mats-bomber-rocket.name = Bomber Rocket
-block.prog-mats-bomber-rocket.description = Fast moving, drops bombs behind it that deal damage.\nUsed by [gold]Arbalests[] as ammo.
+block.prog-mats-bomber-rocket.description = Fast moving, drops bombs behind it that deal damage.\nUsed by [gold]arbalest[] turrets as ammo.
 
 ## Missile
 block.prog-mats-firestorm.name = [red]Firestorm
@@ -121,16 +127,16 @@ block.prog-mats-arbiter.details = On July 16, 1945, the first ever nuclear bomb 
 block.prog-mats-empty-missile.name = Missile Shell
 block.prog-mats-empty-missile.description = An empty missile shell.
 block.prog-mats-basic-missile.name = Basic Missile
-block.prog-mats-basic-missile.description = Explodes on landing, dealing a lot of damage.\nUsed by [red]Strikedowns[] as ammo.
+block.prog-mats-basic-missile.description = Explodes on landing, dealing a lot of damage.\nUsed by [red]strikedown[] missile turrets as ammo.\nOnly placeable in sandbox.
 block.prog-mats-recursive-missile.name = Recursive Missile
-block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage. Releases weaker versions of itself before landing. Can do this up to 2 times.\nUsed by [red]Strikedowns[] as ammo.
+block.prog-mats-recursive-missile.description = Explodes on landing, dealing a lot of damage. Releases weaker versions of itself before landing. Can do this up to 2 times.\nUsed by [red]strikedown[] missile turrets as ammo.\nOnly placeable in sandbox.
 block.prog-mats-empty-nuke.name = Nuclear Missile Shell
 block.prog-mats-empty-nuke.description = An empty nuclear missile shell.
 block.prog-mats-basic-nuke.name = Basic Nuke
-block.prog-mats-basic-nuke.description = Explodes on landing, dealing a ton of damage.\nUsed by [red]Trinitys[] as ammo.
+block.prog-mats-basic-nuke.description = Explodes on landing, dealing a ton of damage.\nUsed by [red]trinity[] missile turrets as ammo.\nOnly placeable in sandbox.
 block.prog-mats-basic-nuke.details = [red]SPONTANIUM COMBUSTUM![] That's a spell that makes the person who said it\n[red]e x p l o d e[].
 block.prog-mats-cluster-nuke.name = Cluster Nuke
-block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by [red]Trinitys[] as ammo.
+block.prog-mats-cluster-nuke.description = Splits before landing, creating multiple impacts that deal a lot of damage.\nUsed by [red]trinity[] missile turrets as ammo.\nOnly placeable in sandbox.
 
 ## Pixel
 block.prog-mats-bit.name = [pink]Pixel
