Power System Booster

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -290,6 +290,8 @@ bar.pm-fuel = Fuel: {0}{1}
 bar.pm-fuel-unneeded = Not required
 bar.pm-fuel-use = Fuel per craft: {0}
 
+bar.pm-totalboost = Boost: +{0}% ({1} boosters)
+
 stat.pm-sentry-lifetime = [lightgray]([stat]{0}[lightgray] second lifetime)
 
 stat.pm-inferno = Everything in range
@@ -297,6 +299,8 @@ stat.pm-inferno = Everything in range
 stat.pm-static-power = {0} power units/second per link
 
 stat.pm-multi-recipe = [accent]Recipe {0}:
+
+stat.pm-powersecondblock = power units/second/block boosted
 
 pm-fuel = [lightgray]Fuel:
 pm-fuel.input = [stat]{0}[lightgray] added per item
